fix: fix horizontal scroll page

--- a/songbird/pages/gallery/style.css
+++ b/songbird/pages/gallery/style.css
@@ -12,6 +12,8 @@ html {
   /* для плавной прокрутки */
   font-family: "Roboto";
   font-style: normal;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 .container {
